--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>DAW project</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="desktop.css" rel="stylesheet" type="text/css" />
+  <link href="tablet.css" rel="stylesheet" type="text/css" />
+  <link href="mobil.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <script src="script.js"></script>
 
   <header id="bar-header">
     <h1 id="bar-title">Proyecto DAW</h1>
@@ -439,6 +441,8 @@
       <p class="footer-text">Profesor: Alan Avedaño</p>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
