Se han agregado elementos en el html

--- a/index.html
+++ b/index.html
@@ -155,11 +155,37 @@
       <section id="contenido-sec" class="section-element">
         <h3 class="section-title">Contenido</h3>
         <ul>
-          <li><a>Resumen</a></li>
-          <li><a>Proyectos</a></li>
-          <li><a>Colección retro</a></li>
-          <li><a>Formulario</a></li>
-          
+          <li><a href="#resumen-sec">Resumen</a></li>
+          <li><a href="#espol-sec">Sobre ESPOL</a></li>
+          <li><a href="#proyectos-sec">Proyectos</a></li>
+          <li><a href="#coleccion-sec">Colección retro</a></li>
+          <li><a href="audio-sec">Cancion favorita</a></li>
+          <li><a href="#form-sec">Formulario</a></li>   
+        </ul>
+      </section>
+
+      <section id="requerimientos-sec" class="section-element">
+        <h3>Esta página contiene</h3>
+        <ul>
+          <li><a href="#bar-title">Títulos por nivel</a></li>
+          <li><a href="#lenguajes-list">Listas</a></li>
+          <li><a href="#coleccion-table">Tablas</a></li>
+          <li><a href="#profile-img">Imágenes - íconos</a></li>
+          <li><a href="#mapa">Mapa envevido</a></li>
+          <li><a href="#form-sec">Formulario</a></li>
+          <li>Audio</li>
+          <li>Flex - Grid</li>
+          <li>Hojas de estilo externas</li>
+          <li>
+            <span>Efectos CSS</span>
+            <ul>
+              <li><a href="#coleccion-img">Esquinas redondeadas</a></li>
+              <li><a href="#resumen-sec">Sombras</a></li>
+              <li> <a href="#coleccion-table">Hover</a></li>
+            </ul>
+          </li>
+          <li>Diseño responsivo</li>
+          <li><a href="#redes-icon-div">Enlaces a redes</a></li>
         </ul>
       </section>
     </div>
