Se ha agregado un archivo de audio y se han agrupado las diferentes hojas de estilo en una carpeta

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>DAW project</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link href="desktop.css" rel="stylesheet" type="text/css" />
-  <link href="tablet.css" rel="stylesheet" type="text/css" />
-  <link href="mobil.css" rel="stylesheet" type="text/css" />
+  <link href="styles/style.css" rel="stylesheet" type="text/css" />
+  <link href="styles/desktop.css" rel="stylesheet" type="text/css" />
+  <link href="styles/tablet.css" rel="stylesheet" type="text/css" />
+  <link href="styles/mobil.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -150,6 +150,15 @@
       </div>
     </section>
 
+    <section id="audio-sec" class="content-section">
+      <h3 class="section-title">Cancion favorita</h3>
+      <span id="audio-nombre" class="section-element">November Rain - Guns N' Roses</span>
+      <audio controls class="section-element">
+        <source src="audio/november_rain.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio>
+    </section>
+
 
     <div id="side-div" class="content-section">
       <section id="contenido-sec" class="section-element">
@@ -159,7 +168,7 @@
           <li><a href="#espol-sec">Sobre ESPOL</a></li>
           <li><a href="#proyectos-sec">Proyectos</a></li>
           <li><a href="#coleccion-sec">Colección retro</a></li>
-          <li><a href="audio-sec">Cancion favorita</a></li>
+          <li><a href="#audio-sec">Canción favorita</a></li>
           <li><a href="#form-sec">Formulario</a></li>   
         </ul>
       </section>
@@ -171,9 +180,9 @@
           <li><a href="#lenguajes-list">Listas</a></li>
           <li><a href="#coleccion-table">Tablas</a></li>
           <li><a href="#profile-img">Imágenes - íconos</a></li>
-          <li><a href="#mapa">Mapa envevido</a></li>
+          <li><a href="#mapa">Mapa embebido</a></li>
           <li><a href="#form-sec">Formulario</a></li>
-          <li>Audio</li>
+          <li><a href="#audio-sec">Audio</a></li>
           <li>Flex - Grid</li>
           <li>Hojas de estilo externas</li>
           <li>
@@ -185,7 +194,7 @@
             </ul>
           </li>
           <li>Diseño responsivo</li>
-          <li><a href="#redes-icon-div">Enlaces a redes</a></li>
+          <li><a href="#proyectos-sec">Enlaces a redes</a></li>
         </ul>
       </section>
     </div>
