--- a/Proyecto 2/plantilla/html/index.html
+++ b/Proyecto 2/plantilla/html/index.html
@@ -262,7 +262,7 @@
 
               <ul class="navbar-nav flex-row align-items-center ms-auto">
                 <!-- Place this tag where you want the button to render. -->
-                <li class="nav-item lh-1 me-3">
+                <li id="star-tag" class="nav-item lh-1 me-3">
                   <a
                     class="github-button"
                     href="https://github.com/jdvillal"
@@ -351,7 +351,7 @@
                   <div class="card">
                     <div class="row row-bordered g-0">
                       <div class="col-md">
-                        <h5 id="coin-name-h5" class="card-header m-0 me-2 pb-3">COIN</h5>
+                        <h3 id="coin-name-h5" class="card-header m-0 me-2 pb-3">COIN</h3>
                         <div id="gen-chart-div container" class="">
                           <div id="chart-select-div" class="row mb-2 mx-2">
                     
@@ -416,7 +416,7 @@
                 <!--/ info-cards -->
                 <div class="col-md-12 col-lg-4 order-3 order-md-2">
                   <div class="row ">
-                    <div class="col-md-5 col-lg-5 mb-4">
+                    <div class="col-md-5 col-lg-6 mb-4">
                       <div class="card">
                         <div class="card-body">
                           <div class="card-title d-flex align-items-start justify-content-between">
@@ -431,12 +431,12 @@
                             </div>
                           </div>
                           <span class="d-block fw-semibold mb-1">Precio Actual</span>
-                          <h3 id="current-price-tag" class="card-title text-nowrap mb-2"></h3>
+                          <h4 id="current-price-tag" class="card-title text-nowrap mb-2"></h4>
                           <small id="price-percent-tag" class="text-success fw-semibold"><i class="bx bx-up-arrow-alt"></i> %</small>
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-7 col-lg-7 mb-4">
+                    <div class="col-md-7 col-lg-6 mb-4">
                       <div class="card">
                         <div class="card-body">
                           <div class="card-title d-flex align-items-start justify-content-between">
@@ -451,7 +451,7 @@
                             </div>
                           </div>
                           <span class="fw-semibold d-block mb-1">Cap. Mercado</span>
-                          <h3 id="current-mcap-tag" class="card-title mb-2"></h3>
+                          <h4 id="current-mcap-tag" class="card-title mb-2"></h4>
                           <small id="mcap-percent-tag" class="text-danger fw-semibold"><i class="bx bx-down-arrow-alt"></i> %</small>
                         </div>
                       </div>
@@ -582,18 +582,18 @@
                   <a href="https://github.com/jdvillal" target="_blank" class="footer-link fw-bolder">Jorge Villalta</a>
                 </div>
                 <div>
-                  <a href="https://github.com/jdvillal" class="footer-link me-4" target="_blank">License</a>
-                  <a href="https://github.com/jdvillal" target="_blank" class="footer-link me-4">More Themes</a>
+                  <a href="https://github.com/jdvillal/DAW_proyecto1" class="footer-link me-4" target="_blank">License</a>
+                  <a href="https://github.com/jdvillal/DAW_proyecto1" target="_blank" class="footer-link me-4">More Themes</a>
 
                   <a
-                    href="https://github.com/jdvillal"
+                    href="https://github.com/jdvillal/DAW_proyecto1"
                     target="_blank"
                     class="footer-link me-4"
                     >Documentation</a
                   >
 
                   <a
-                    href="https://github.com/jdvillal"
+                    href="https://github.com/jdvillal/DAW_proyecto1"
                     target="_blank"
                     class="footer-link me-4"
                     >Support</a
